add script to get dataset, script to normalize images, script for training model including UI for testing, update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -401,3 +401,10 @@ FodyWeavers.xsd
 
 # JetBrains idea
 .idea
+
+# input data for training model
+training/data_split
+
+# ingore MacOS .DS_Store files
+training/.DS_Store
+.DS_Store
