--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,6 @@
 services:
   frontend:
+    container_name: suml-frontend
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -11,6 +12,7 @@ services:
       - drone-network
 
   backend:
+    container_name: suml-backend
     build:
       context: ./backend
       dockerfile: Dockerfile
