--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   frontend:
     container_name: suml-frontend
+    image: pjatksuml/frontend:latest
     build:
       context: ./frontend
       dockerfile: Dockerfile
@@ -13,6 +14,7 @@ services:
 
   backend:
     container_name: suml-backend
+    image: pjatksuml/backend:latest
     build:
       context: ./backend
       dockerfile: Dockerfile
