--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -41,7 +41,7 @@ jobs:
           severity: 'CRITICAL,HIGH'
 
       - name: Run Trivy scanner for backend
-        uses: aquasecurity/trivy-action@v0.20.0
+        uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
         with:
           image-ref: 'pjatksuml/backend'
           format: 'template'
