--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -39,9 +39,10 @@ jobs:
           template: '@/contrib/sarif.tpl'
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
+          timeout: 20m
 
       - name: Run Trivy scanner for backend
-        uses: aquasecurity/trivy-action@v0.20.0
+        uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
         with:
           image-ref: 'pjatksuml/backend'
           format: 'template'
@@ -49,6 +50,7 @@ jobs:
           output: 'trivy-results-backend.sarif'
           severity: 'CRITICAL,HIGH'
           exit-code: '1'
+          timeout: 20m
 
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
