--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -32,7 +32,7 @@ jobs:
         run: docker compose -f docker-compose.yml build
 
       - name: Run Trivy vulnerability scanner for frontend
-        uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
+        uses: aquasecurity/trivy-action@0.30.0
         with:
           image-ref: 'pjatksuml/frontend'
           format: 'sarif'
@@ -40,10 +40,11 @@ jobs:
           severity: 'CRITICAL,HIGH'
           exit-code: '1'
           timeout: 20m
-          security-checks: 'vuln'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
 
       - name: Run Trivy vulnerability scanner for backend
-        uses: aquasecurity/trivy-action@7b7aa264d83dc58691451798b4d117d53d21edfe
+        uses: aquasecurity/trivy-action@0.30.0
         with:
           image-ref: 'pjatksuml/backend'
           format: 'sarif'
@@ -51,7 +52,8 @@ jobs:
           severity: 'CRITICAL,HIGH'
           exit-code: '1'
           timeout: 20m
-          security-checks: 'vuln'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
 
       - name: Upload Trivy scan results for frontend
         uses: github/codeql-action/upload-sarif@v3
