--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -35,32 +35,25 @@ jobs:
         uses: aquasecurity/trivy-action@0.30.0
         with:
           image-ref: 'pjatksuml/frontend'
-          format: 'sarif'
-          output: 'trivy-results-frontend.sarif'
+          format: 'table'
           severity: 'CRITICAL,HIGH'
           exit-code: '1'
           timeout: 20m
           ignore-unfixed: true
           vuln-type: 'os,library'
+          skip-dirs: |
+            opt/conda
+        continue-on-error: true
 
       - name: Run Trivy vulnerability scanner for backend
         uses: aquasecurity/trivy-action@0.30.0
         with:
           image-ref: 'pjatksuml/backend'
-          format: 'sarif'
-          output: 'trivy-results-backend.sarif'
+          format: 'table'
           severity: 'CRITICAL,HIGH'
           exit-code: '1'
           timeout: 20m
           ignore-unfixed: true
           vuln-type: 'os,library'
-
-      - name: Upload Trivy scan results for frontend
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: 'trivy-results-frontend.sarif'
-
-      - name: Upload Trivy scan results for backend
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: 'trivy-results-backend.sarif'
+          skip-dirs: |
+            opt/conda
