--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,29 +1,37 @@
-name: Build and Push Docker Image to ACR
+name: Build and Deploy to Azure Container Apps
 
 on:
   push:
     branches:
       - main
+  workflow_dispatch:
 
 jobs:
-  build-and-push:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout repo
       uses: actions/checkout@v3
 
-    - name: Log in to Azure Container Registry
+    - name: Login to Azure
       uses: azure/login@v1
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Build and push Docker image
-      uses: azure/docker-login@v1
+    - name: Build and push image to ACR
+      uses: docker/build-push-action@v4
       with:
-        login-server: birddrone.azurecr.io
+        context: .
+        push: true
+        tags: birddrone.azurecr.io/birddrone:${{ github.sha }}
 
-    - name: Build and push image
-      run: |
-        docker build -t birddrone.azurecr.io/myapp:latest .
-        docker push birddrone.azurecr.io/myapp:latest
+    - name: Deploy to Azure Container Apps
+      uses: azure/azure-container-apps-deploy@v1
+      with:
+        app-name: bird-drone
+        resource-group: SUML
+        image: birddrone.azurecr.io/birddrone:${{ github.sha }}
+        registry-server: birddrone.azurecr.io
+        registry-username: ${{ secrets.ACR_USERNAME }}
+        registry-password: ${{ secrets.ACR_PASSWORD }}
