--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -1,12 +1,12 @@
-name: Build and Push to Azure Container Registry
+name: Build, Push and Deploy to Azure Container Apps
 
 on:
   push:
     branches:
-      - main  # lub master, jak masz
+      - main
 
 jobs:
-  build-and-push:
+  build-push-deploy:
     runs-on: ubuntu-latest
 
     steps:
@@ -31,3 +31,23 @@ jobs:
         context: ./backend
         push: true
         tags: birddrone.azurecr.io/pjatksuml/backend:latest
+
+    - name: Deploy frontend to Azure Container Apps
+      uses: azure/azure-container-apps-deploy@v1
+      with:
+        app-name: bird-drone-frontend
+        resource-group: suml
+        image: birddrone.azurecr.io/pjatksuml/frontend:latest
+        registry-server: birddrone.azurecr.io
+        registry-username: ${{ secrets.ACR_USERNAME }}
+        registry-password: ${{ secrets.ACR_PASSWORD }}
+
+    - name: Deploy backend to Azure Container Apps
+      uses: azure/azure-container-apps-deploy@v1
+      with:
+        app-name: bird-drone-backend
+        resource-group: suml
+        image: birddrone.azurecr.io/pjatksuml/backend:latest
+        registry-server: birddrone.azurecr.io
+        registry-username: ${{ secrets.ACR_USERNAME }}
+        registry-password: ${{ secrets.ACR_PASSWORD }}
