--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -31,5 +31,5 @@ jobs:
       uses: azure/container-apps-deploy-action@v2
       with:
         resourceGroup: suml
-        containerAppName: bird-drone-frontend
+        containerAppName: bird-drone
         imageToDeploy: birddrone.azurecr.io/pjatksuml/frontend:latest
