--- a/backend/environment.yml
+++ b/backend/environment.yml
@@ -25,7 +25,7 @@ dependencies:
   - hyperframe=6.1.0
   - idna=3.7
   - jinja2=3.1.6
-  - libcxx=20.1.3
+  #- libcxx=20.1.3
   - libffi=3.4.6
   - liblzma=5.8.1
   - liblzma-devel=5.8.1
@@ -69,6 +69,7 @@ dependencies:
   - pip:
       - absl-py==2.2.2
       - astunparse==1.6.3
+      - azure-storage-blob
       - charset-normalizer==3.4.1
       - colorama==0.4.6
       - flatbuffers==25.2.10
