--- a/.github/workflows/deploy-to-vm.yml
+++ b/.github/workflows/deploy-to-vm.yml
@@ -18,9 +18,14 @@ jobs:
         ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Deploy to Azure VM
+      env:
+        AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
+      
       run: |
         ssh -o StrictHostKeyChecking=no azureuser@20.215.249.162 << 'EOF'
           cd /home/azureuser/birddrone/SUML
+          echo "AZURE_STORAGE_CONNECTION_STRING='${AZURE_STORAGE_CONNECTION_STRING}'" > backend/.env
+          
           git pull origin main
           docker-compose down
           docker-compose up -d --build
